changed from using Integer constructor to Integer.valueOf.
git-svn-id: https://svn.apache.org/repos/asf/incubator/etch/trunk@712755 13f79535-47bb-0310-9956-ffa450edef68